<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangepasswordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="152dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="@string/Currentpassword"
                    app:layout_constraintEnd_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="216dp"
                    android:layout_height="54dp"
                    android:ems="10"
                    android:hint="@string/Currentpassword"
                    android:inputType="textPassword"
                    android:singleLine="false"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="@string/Newpassword"
                    app:layout_constraintEnd_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

                <EditText
                    android:id="@+id/editTextTextPassword3"
                    android:layout_width="216dp"
                    android:layout_height="54dp"
                    android:ems="10"
                    android:hint="@string/Newpassword"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toTopOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/Confirmnewpassword"
                    app:layout_constraintEnd_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

                <EditText
                    android:id="@+id/editTextTextPassword4"
                    android:layout_width="216dp"
                    android:layout_height="54dp"
                    android:ems="10"
                    android:hint="@string/Confirmnewpassword"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toTopOf="@+id/textView9" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="28dp"
                    android:text="@string/Changepassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@string/Save" />

                <Button
                    android:id="@+id/buttonBack1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginBottom="28dp"
                    android:text="Back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>