<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="124dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="@string/PName"
                    app:layout_constraintEnd_toStartOf="@+id/guideline16"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="250dp"
                    android:layout_height="57dp"
                    android:ems="10"
                    android:hint="@string/PName"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.272"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toTopOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/Contact"
                    app:layout_constraintEnd_toStartOf="@+id/guideline16"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/EmailAddress"
                    app:layout_constraintEnd_toStartOf="@+id/guideline16"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/Save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginBottom="32dp"
                    android:text="Back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="250dp"
                    android:layout_height="57dp"
                    android:ems="10"
                    android:hint="@string/Contact"
                    android:inputType="phone"
                    app:layout_constraintBottom_toBottomOf="@+id/textView12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.289"
                    app:layout_constraintStart_toEndOf="@+id/textView12"
                    app:layout_constraintTop_toTopOf="@+id/textView12" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="250dp"
                    android:layout_height="51dp"
                    android:ems="10"
                    android:hint="@string/EmailAddress"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toBottomOf="@+id/textView14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.297"
                    app:layout_constraintStart_toStartOf="@+id/guideline16"
                    app:layout_constraintTop_toTopOf="@+id/textView14" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
